<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plantilla_bury_app"
    tools:context=".pantallas_de_registros.Registrarcuenta"
    >

    <TextView
        android:id="@+id/textView5"
        android:layout_width="186dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/font2"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:paddingTop="10dp"
        android:text="@string/Registro_nombre"
        android:textAppearance="@style/elige_otro_"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Registro_Gmail"
        android:layout_width="269dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_2"
        android:ems="10"
        android:hint="@string/TextView"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.041" />

    <EditText
        android:id="@+id/Registro_Contraseña"
        android:layout_width="269dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_2"
        android:ems="10"
        android:hint="@string/TextView_3"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Registro_Gmail"
        app:layout_constraintVertical_bias="0.02" />

    <Button
        android:id="@+id/Butto_Registro"
        android:layout_width="186dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_3"
        android:fontFamily="@font/font2"
        android:text="@string/TextView2"
        android:textAppearance="@style/elige_otro_"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Registro_Contraseña"
        app:layout_constraintVertical_bias="0.092"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>