<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/authlayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plantilla_bury_app"
    tools:context=".pantallas_de_registros.Pantalladeinicio">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="285dp"
        android:layout_height="75dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.84">

        <TextView
            android:id="@+id/registrar2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/textview1"
            android:textAppearance="@style/elige_otro_"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="283dp"
        android:layout_height="82dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Siguiente"
        app:layout_constraintVertical_bias="0.079">

        <TextView
            android:id="@+id/textView"
            android:layout_width="183dp"
            android:layout_height="31dp"
            android:layout_marginBottom="32dp"
            android:paddingStart="16dp"
            android:paddingEnd="0dp"
            android:text="@string/Registro"
            android:textAppearance="@style/elige_otro2_"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/registrar1"
            android:layout_width="85dp"
            android:layout_height="51dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/Registro2"
            android:textAppearance="@style/elige_otro2_"
            android:textColor="#FFFF" />
    </LinearLayout>
    <Button
        android:id="@+id/Siguiente"
        android:layout_width="182dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_3"
        android:fontFamily="@font/font2"
        android:text="@string/Button_1"
        android:textAppearance="@style/elige_otro_"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible" />
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="230dp"
        android:layout_height="210dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078"
        app:srcCompat="@drawable/logo_buryapp"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/Registro_nombre"
        android:layout_width="269dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_1"
        android:ems="10"
        android:hint="@string/TextView"
        android:autofillHints="username"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.057" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="269dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_1"
        android:ems="10"
        android:hint="@string/TextView_3"
        android:autofillHints="username"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Registro_nombre" />


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation"
        android:layout_width="413dp"
        android:layout_height="152dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.437"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/progressbar" />

    <Button
        android:id="@+id/Icon_google"
        android:layout_width="74dp"
        android:layout_height="56dp"
        android:background="@color/transparet_100"
        android:drawableStart="@mipmap/google"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
